# Portfolio

./: Cargo.toml  Procfile  Rocket.toml  app.json
articles/: lorem_ipsum.html  lorem_ipsum.md
json/: projects.json  skills.json
src/: main.rs  projects.rs  skills.rs  temp.rs
static/: posts.css  styles.css
templates/: index.hbs
templates/blog/: index.hbs  post.hbs
