[package]
name = "portfolio"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
rocket_contrib = { version = "0.4.10", default-features = false, features = ["templates","handlebars_templates","serve"] }
chrono = "0.4.19"
rustc_version_runtime = "0.2.0"
serde = {version = "1.0.117",features = ["derive"]}
glob = "0.3.0"
comrak = "0.11.0"
serde_json = "1.0.73"